# Aiza

./: CMakeLists.txt  LICENSE  README.md  install.sh
src/: ignore.cpp  ignore.hpp  main.cpp  search.cpp  search.hpp  thread_pool.hpp  utils.cpp  utils.hpp
